--- a/typescript-graphql-server/package.json
+++ b/typescript-graphql-server/package.json
@@ -19,6 +19,8 @@
     "typescript": "^3.2.2"
   },
   "scripts": {
-    "start": "nodemon --exec ts-node src/index.ts"
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   }
 }
