--- a/typescript-graphql-server/tsconfig.json
+++ b/typescript-graphql-server/tsconfig.json
@@ -23,7 +23,8 @@
     "experimentalDecorators": true,
     "skipLibCheck": true,
     "baseUrl": ".",
-    "rootDir": "src"
+    "rootDir": "src",
+    "esModuleInterop": true
   },
   "exclude": ["node_modules"],
   "include": ["./src/**/*.tsx", "./src/**/*.ts"]
