--- a/typescript-graphql-server/package.json
+++ b/typescript-graphql-server/package.json
@@ -4,9 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@mikro-orm/cli": "^4.5.7",
+    "@mikro-orm/core": "^4.5.7",
+    "@mikro-orm/migrations": "^4.5.7",
+    "@mikro-orm/postgresql": "^4.5.7",
     "apollo-server-express": "^2.3.1",
     "express": "^4.16.4",
     "graphql": "^14.0.2",
+    "pg": "^8.7.1",
     "reflect-metadata": "^0.1.12",
     "type-graphql": "^0.16.0"
   },
@@ -20,7 +25,15 @@
   },
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
+    "watch": "tsc -w",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "nodemon dist/index.js"
+  },
+  "mikro-orm": {
+    "useTsNode": true,
+    "configPaths": [
+      "./src/mikro-orm.config.ts",
+      "./dist/mikro-orm.config.js"
+    ]
   }
 }
