--- a/typescript-graphql-server/package.json
+++ b/typescript-graphql-server/package.json
@@ -4,24 +4,23 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@mikro-orm/cli": "^4.5.7",
-    "@mikro-orm/core": "^4.5.7",
-    "@mikro-orm/migrations": "^4.5.7",
-    "@mikro-orm/postgresql": "^4.5.7",
-    "apollo-server-express": "^2.3.1",
-    "express": "^4.16.4",
-    "graphql": "^14.0.2",
-    "pg": "^8.7.1",
-    "reflect-metadata": "^0.1.12",
-    "type-graphql": "^0.16.0"
+    "@mikro-orm/cli": "^4.0.0-alpha.0",
+    "@mikro-orm/core": "^4.0.0-alpha.0",
+    "@mikro-orm/migrations": "^4.0.0-alpha.0",
+    "@mikro-orm/postgresql": "^4.0.0-alpha.0",
+    "apollo-server-express": "^2.16.1",
+    "express": "^4.17.1",
+    "graphql": "^15.3.0",
+    "pg": "^8.3.0",
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^1.0.0-rc.3"
   },
   "devDependencies": {
-    "@types/express": "^4.16.0",
-    "@types/graphql": "^14.0.4",
-    "@types/node": "^10.12.18",
-    "nodemon": "^1.18.9",
-    "ts-node": "^7.0.1",
-    "typescript": "^3.2.2"
+    "@types/express": "^4.17.7",
+    "@types/node": "^14.0.27",
+    "nodemon": "^2.0.4",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
